crates/compiler/src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_basic_struct.ts_function_FunctionDeclarationID(17).snap
---
source: crates/compiler/src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_7
