crates/compiler/src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_basic_struct.ts_function_FunctionDeclarationID(42).snap
---
source: crates/compiler/src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_15
block_15 -> [block_28, ]
block_28 -> [block_33, ]
