crates/compiler/src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_borrow.ts_function_FunctionDeclarationID(29).snap
---
source: crates/compiler/src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_16
