crates/compiler/src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_if.ts_function_FunctionDeclarationID(39).snap
---
source: crates/compiler/src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_22
block_22 -> [block_28, ]
block_28 -> [block_29, ]
