crates/compiler/src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_if_else_borrow_in_both_branches.ts_function_FunctionDeclarationID(42).snap
---
source: crates/compiler/src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_22
block_22 -> [block_28, block_31, ]
block_28 -> [block_30, ]
block_31 -> [block_30, ]
