crates/compiler/src/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_if_else_three.ts_function_FunctionDeclarationID(35).snap
---
source: crates/compiler/src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_15
block_15 -> [block_21, block_23, ]
block_21 -> [block_22, ]
block_23 -> [block_22, ]
